--- a/package.json
+++ b/package.json
@@ -12,9 +12,12 @@
   "dependencies": {
     "axios": "^1.7.4",
     "clsx": "^2.1.1",
+    "modern-normalize": "^3.0.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hot-toast": "^2.4.1",
+    "react-icon": "^1.0.0",
+    "react-icons": "^5.3.0",
     "react-loader-spinner": "^6.1.6",
     "react-router-dom": "^6.26.1"
   },
